# docxengine

./: .gitattributes  .gitignore  .prettierignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSING.md  Makefile  NOTICE  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  commitlint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
bench/: README.md  checker.py  perf.py  run.py
conformance/: README.md
docs/: README.md
examples/: README.md
js/: README.md  package.json  tsconfig.build.json  tsconfig.json
python/: README.md  pyproject.toml
python/scripts/: sync_spec.py
python/src/docxengine/: __init__.py  _comments.py  _create.py  _document.py  _edits.py  _fields.py  _limits.py  _mcp_facade.py  _media.py  _opc.py  _parts.py  _paths.py  _projector.py  _props.py  _render.py  _sections.py  _spec.py  _tables.py  _template.py  _tools_edit.py  _tools_lifecycle.py  _xml.py  errors.py  mcp.py
python/src/docxengine/_specdata/tools/: docx_comment.json  docx_convert.json  docx_edit_paragraph.json  docx_open.json  docx_render_preview.json  docx_section.json  docx_table.json  docx_template_fill.json
python/tests/: conftest.py  test_cli.py  test_create.py  test_dispatch.py  test_document.py  test_edit.py  test_mcp.py  test_mcp_facade.py  test_mcp_http.py  test_opc.py  test_read.py  test_render.py  test_result_shapes.py  test_revisions.py  test_sections.py  test_template.py
scripts/: sync_spec.py
spec/: README.md  algorithms.md  errors.json
(+247 files in other folders)
